--- a/adchpp/SConscript
+++ b/adchpp/SConscript
@@ -1,16 +1,25 @@
 # vim: set filetype=py
 
 def getRevision(env):
-	try:
-		import subprocess
-		ret = subprocess.check_output('hg identify -i', shell=True)
-		if ret:
-			return ret[:-1]  # Remove the trailing line-ending char. @todo: This returns a 2 byte line-ending when compiled on Win so there's some cruft in the end of the generated revno string on Win builds...
-	except:
-		pass
+    """Attempt to get information about the repository, via the "hg log"
+    command. Its output is formatted via the "-T" parameter (see "hg templates"
+    for details).
 
-	return '[unknown]'
+    :return: Version information string, or "[unknown]" on failure.
+    :rtype: str.
+    """
 
+    try:
+        import subprocess
+        ret = subprocess.check_output(
+            'hg log -r tip -T "{node | short} - {date | isodate}"',
+            shell=True
+        )
+        if ret:
+            return ret
+    except:
+        pass
+    return '[unknown]' 
  
 Import('dev source_path')
 
